# concussion

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
concussion/: __init__.py  __main__.py  base.py  based.py  concussion.py  cursed_path.py  fs_locals.py  repl.py  shell_builtins.py  shell_state.py  stoppable_thread.py
pysh/: __init__.py  pysh.py  shell_builtins.py
tests/: cursed_path_test.py  fs_locals_test.py
