[tool.poetry]
name = "concussion"
version = "0.2.0"
description = "It's kinda like Bash except it causes severe brain damage because it's actually a Python REPL."
authors = ["Miguel Guthridge <hello@miguelguthridge.com>"]
license = "MIT"
readme = "README.md"

include = ["py.typed"]
packages = [
    { include = "concussion" }
]

[tool.poetry.scripts]
concussion = "concussion.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
